# blackmagicstereograbber

./: .gitignore  CMakeLists.txt  README.md
include/: VideoInputFromBlackMagic.hpp
src/: CMakeLists.txt  VideoInputFromBlackMagic.cu
src/tests/: CMakeLists.txt  main.cpp  mainMono.cpp  mainSaveImages.cpp  mainSaveImagesV.cpp
